<resources>
    <string name="app_name" translatable="false">Together We Can</string>
    <string name="ok">OK</string>
    <string name="msg_toast_generic_exception">Sorry! Something went wrong.</string>
    <string name="msg_toast_no_internet">Sorry we cannot detect an internet connection. Please reconnect and try again</string>
    <string name="msg_toast_connection_error">Sorry we cannot detect an internet connection. Please reconnect and try again</string>
    <string name="msg_toast_service_error">Sorry! The service currently unavailable.</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="turn_bluetooth_on_msg">Keep your Bluetooth ON and help the authorities prevent the spread of COVID-19</string>
    <string name="ble_ready">Bluetooth is ON - I am ready to help!</string>
    <string name="ble_not_ready">Setup Bluetooth</string>
    <string name="enter_your_mobile_number_to_receive_a_one_time_pin_otp">Enter your mobile number\nto receive a One-Time-PIN (OTP)</string>
    <string name="join">Join</string>
    <string name="verify_the_number">Verify the number</string>
    <string name="no_risk_button">I\'m not infected</string>
    <string name="quarantined_button">I\'m quarantined</string>
    <string name="total_cases">Total cases</string>
    <string name="new_cases">New cases</string>
    <string name="deaths">Deaths</string>
    <string name="recovered_discharged">Recovered &amp; discharged</string>
    <string name="update">Update</string>
    <string name="update_msg">Please update your app to continue</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="ble_not_supported">Sorry! You device doesn\'t support for scanning feature. But still you can continue and update your status.</string>
    <string name="lang_select_message">Together We Can application is\ndeveloped by the Government of\nSri Lanka to fight back this deadly\npandemic of COVID-19.</string>
    <string name="app_permissions">App permissions</string>
    <string name="permission_msg_1">We understand the sensitive nature of the data you provide via this application. Therefore, measures have taken to ensure that your data is not compromised. All data will be handled by officials of the Government of Sri Lanka under strict security measures.</string>
    <string name="device_location_description">It is recommend to set your Location permission setting for this application to ‘Always’. You can change the settings anytime later. Please note that your GPS location will not be acquired by the app. Your location permission will only be used for the BLE scanning process as per Google restrictions.</string>
    <string name="device_location">Device location</string>
    <string name="click_here_for_more_details"><![CDATA[<b><font color=#1863A5>Click here</font></b> for more details.]]></string>
    <string name="bluetooth_permission_msg">Bluetooth monitors your device\'s proximity to another device. It is recommended to keep it ON all times.</string>
    <string name="data_sharing">Data sharing</string>
    <string name="data_sharing_msg">Your data will be only shared with the government of Sri Lanka. Your name, number or any other details you provide on this application will not be disclosed.</string>
    <string name="app_permission_msg_2">This mobile application is developed under the supervision of Government of Sri Lanka as bold step of prevention of spreading COVID-19 virus within the country. Your contribution is highly appreciated at this time and it is your responsibility as a citizen of a proud nation.</string>
    <string name="i_agree_let_s_proceed">I agree, let\'s proceed</string>
    <string name="change_the_language">Change the language</string>
    <string name="turn_bluetooth_on">Turn Bluetooth ON</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_message">Enter the four digit PIN you just received to %1$s</string>
    <string name="otp">OTP</string>
    <string name="didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="resend">Resend</string>
    <string name="update_status">Update Status</string>
    <string name="how_can_you_do_your_part_in_preventing_the_spread_of_covid_19">How can you do your part in preventing the spread of COVID-19?</string>
    <string name="with_just_a_click_select_the_option_which_best_describes_your_current_status">With just a click! Select the option which best describes your current status</string>
    <string name="update_my_status">Update my status</string>
    <string name="my_status_col">My Status:</string>
    <string name="you_are_a_hero">YOU ARE A HERO!</string>
    <string name="thank_you_msg">Thank you for being a responsible citizen and doing your part to prevent the spread of the virus COVID-19. Please make sure you keep this application open (on power saver mode) especially when in public places such as supermarkets, buses, meetings or hospitals.</string>
    <string name="change_my_status">Change my status</string>
    <string name="other_ways_you_can_help">Other ways you can help</string>
    <string name="upload_my_recent_contacts_to_authorities">Upload my recent contacts to authorities</string>
    <string name="share_this_app_with_friends_and_family">Share this app with friends and family</string>
    <string name="current_situation_in_sri_lanka">Current situation in Sri Lanka</string>
    <string name="total_number_of_individuals_in_hospitals">Total number of individuals in hospitals</string>
    <string name="upload_your_data">Upload your data!</string>
    <string name="upload_msg">You have been identified as infected or exposed to a contagious person</string>
    <string name="tap_here_to_upload_your_data_u"><u>Tap here to upload your data</u></string>
    <string name="not_infected">Not Infected</string>
    <string name="quarantined">Quarantined</string>
    <string name="home">Home</string>
    <string name="report_possible_cases">Report possible cases</string>
    <string name="request_assistance">Request assistance</string>
    <string name="self_health_check">Self health check</string>
    <string name="request_medicine">Request medicine</string>
    <string name="faq">FAQ</string>
    <string name="upload_my_recent_contacts">Upload my recent contacts</string>
    <string name="upload_screen_msg">If you are contacted by an authority to provide the data you have collected in the past few days, please tap the button below to upload your data to us.\n\nBy uploading, you agree to share the close proximity contact data that you have collected for the past few days. This data does contain neither location data nor direct contact details of anyone. Authorities do not collect any of your personal information.</string>
    <string name="hint_name_with_initials">*Name with initials</string>
    <string name="hint_mobile_number">*Mobile number</string>
    <string name="hint_address">*Address</string>
    <string name="i_m_infected">I\'m infected</string>
    <string name="data_upload_failed_msg">Data upload failed!</string>
    <string name="data_upload_success_msg">Data has been successfully uploaded!</string>
    <string name="success">Success</string>
    <string name="no_data_to_upload_msg">We haven’t collected enough information to upload. Please try again later.</string>
    <string name="infected">Infected</string>
    <string name="upload_now">Upload now</string>
    <string name="otp_resend_msg">OTP Request successful!</string>
    <string name="get_assistance">Get Assistance</string>
    <string name="language">Language</string>
    <string name="hint_what_is_your_request">*What is your request?</string>
    <string name="submit">Submit</string>
    <string name="get_assistance_msg">Contact us through the following request sheet to get assistance from our authorities. We will try our best to contact you as soon as possible.</string>
    <string name="name_required">Name required</string>
    <string name="mobile_required">Mobile number required</string>
    <string name="address_required">Address required</string>
    <string name="message_required">Message required</string>
    <string name="successful">Successful</string>
    <string name="get_assistance_success_msg_food">We have received your request successfully. Please stay at home and contact us if you require more food. We will get in touch with you as soon as possible. Thank you!</string>
    <string name="get_assistance_success_msg_medicine">We have received your request successfully. Please stay at home and contact us if the symptoms get escalated. We will get in touch with you as soon as possible. Thank you!</string>
    <string name="get_assistance_success_msg_other">We have received your request successfully. Please stay at home and contact us if you require any assistance. We will get in touch with you as soon as possible. Thank you!</string>
    <string name="quota_limit_msg">You can make %1$d more requests for today</string>
    <string name="quota_limit__reached_msg">You have reached your daily limit</string>
    <string name="share_msg">Join the fight against COVID-19 with this app\n%1$s</string>
    <string name="scanner_not_running_service_msg">Scanner not running! Please make sure Bluetooth is ON and required permissions are granted</string>
    <string name="service_notification_title">Together We Can</string>
    <string name="scanning">Scanning…</string>
    <string name="stop">Stop</string>
    <string name="get_assistance_disclaimer">By pressing submit button below, hereby I provide my consent and permission for the authorities to save my contact details to provide assistance.</string>
    <string name="functionality_limited">Functionality limited</string>
    <string name="perm_not_granted_msg">Since location access has not been granted, this app will not be able to discover nearby devices.</string>
    <string-array name="assistance_types">
        <item>Request Food</item>
        <item>Request Medicines</item>
        <item>Report Nearby Cases</item>
    </string-array>

</resources>
