<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F4FC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:text="@string/get_assistance"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/get_assistance_msg"
            android:textColor="@color/text_ash"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/card_bg"
            android:hint="@string/hint_name_with_initials"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-16dp"
            android:background="@drawable/card_bg"
            android:hint="@string/hint_mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="-16dp"
            android:background="@drawable/card_bg"
            android:gravity="top"
            android:hint="@string/hint_address"
            android:inputType="textPostalAddress"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-16dp"
            android:background="@drawable/spinner_bg"
            android:entries="@array/assistance_types"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etRequest"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="-16dp"
            android:background="@drawable/card_bg"
            android:gravity="top"
            android:hint="@string/hint_what_is_your_request"
            android:inputType="textCapSentences"
            android:textColor="#000000"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/get_assistance_disclaimer"
            android:textColor="@color/text_ash"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvQuotaStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/blue_button_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>